[metadata]
name = selang
version = 0.1.1
description = Python, ASP and JSON abstractions of the SpaceEngine modding language
long_description = file: README.mkd
author = Lucas Bourneuf
author_email = lucas.bourneuf@laposte.net
url = https://github.com/aluriak/se-lang
license = GPL
keywords = SpaceEngine, DSL, Answer Set Programming
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: ASP

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    clyngor>=0.3.1

[options.packages.find]
where = .
